methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:2: error: Missing closing brace `}' assumed here
def hunt(c:Color) {while (estSurBiscuit == false) {
^SlugSnail:2: error: expected class or object definition
def hunt(c:Color) {while (estSurBiscuit == false) {
^